--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "package-json-rs"
-version = "0.0.1"
+name = "package-json"
+version = "0.1.0"
 edition = "2021"
-author = "Liu Bowen <asyncmode@outlook.com>"
+authors = ["Liu Bowen <asyncmode@outlook.com>"]
 description = "package.json manager for Rust"
-keywords = ["package.json", "json", "npm", "node.js"]
-category = "package.json"
+keywords = ["package_json", "node_js", "npm", "yarn", "pnpm"]
+categories = ["data-structures", "encoding", "api-bindings"]
 repository = "https://github.com/lbwa/package-json-rs"
-publish = ["package_json"]
 license = "MIT"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -19,4 +19,3 @@ serde_json = "1.0.82"
 
 [features]
 default = []
-schema = []
