docs: usage details

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Liu Bowen <asyncmode@outlook.com>"]
 description = "package.json manager for Rust"
-keywords = ["package_json", "node_js", "npm", "yarn", "pnpm"]
+keywords = ["package_json", "nodejs", "npm", "yarn", "pnpm"]
 categories = ["data-structures", "encoding", "api-bindings"]
 repository = "https://github.com/lbwa/package-json-rs"
 license = "MIT"
