--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "package-json"
 version = "0.3.0"
 edition = "2021"
-authors = ["Liu Bowen <asyncmode@outlook.com>"]
+authors = ["Liu Bowen <bowen_dev@outlook.com>"]
 description = "package.json manager for Rust"
 keywords = ["package_json", "nodejs", "npm", "yarn", "pnpm"]
 categories = ["data-structures", "encoding", "api-bindings"]
@@ -20,6 +20,7 @@ all-features = true
 serde = { version = "1.0.138", features = ["derive"] }
 anyhow = "1.0.58"
 serde_json = "1.0.82"
+derive_builder = "0.12.0"
 
 [features]
 default = []
